--- a/about.html
+++ b/about.html
@@ -14,32 +14,12 @@
 </head>
 
 <body>
-  <div class="wrapper">
 
-    <!-- ===============================
-         NAVIGAATIO
-    =============================== -->
-    <nav class="nav-container">
-      <div class="logo-group">
-        <img src="images/logo.jpg" alt="Fox logo" class="logo" />
-        <span class="brand">Fox-In-The-Code</span>
-      </div>
-      <div class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="about.html" class="active">About</a>
-        <a href="contact.html">Contact</a>
-        <a href="services.html">Services</a>
-      </div>
-    </nav>
+  
 
-    <!-- ===============================
-         NAVIN AALTO (SVG)
-    =============================== -->
-    <div class="nav-curve">
-      <svg viewBox="0 0 100 10" preserveAspectRatio="none">
-        <path d="M 0 0 Q 50 1, 100 0" fill="rebeccapurple" />
-      </svg>
-    </div>
+   <!--============================================================== HOX! Navigaatio ladataan dynaamisesti tiedostosta erillisillä nav.html JavaScriptillä* (*lomakeilmoitus) HOX!  ===========================================================-->
+
+
 
     <!-- ===============================
          SISÄLTÖALUE – ABOUT
@@ -136,6 +116,31 @@
       <p>&copy; 2025 Fox-In-The-Code | All rights reserved.</p>
     </footer>
   </div>
+  <!-- ===============================
+    JavaScript: lomakeilmoitus
+  =============================== -->
+  <script>
+    // Lataa nav.html ja lisää sen sivulle
+    fetch("nav.html")
+      .then(response => response.text())
+      .then(data => {
+        const placeholder = document.createElement("div");
+        placeholder.innerHTML = data;
+        document.body.insertBefore(placeholder, document.body.firstChild);
+  
+        // Aktivoi burger-valikon toiminto navin lataamisen jälkeen
+        const script = document.createElement("script");
+        script.innerHTML = `
+          function toggleMenu() {
+            document.getElementById('nav-links').classList.toggle('active');
+          }
+        `;
+        document.body.appendChild(script);
+      });
+  </script>
+<div class="wrapper">
+
+
 </body>
 
 </html>
