Valmis ja toimiva sivusto

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <div class="wrapper">
-
+   <p style="color:red;">TESTI123 - näkyykö tämä??</p>
     <!-- Navigaatio ladataan dynaamisesti tiedostosta nav.html JavaScriptillä -->
      
 
