--- a/nav.html
+++ b/nav.html
@@ -9,7 +9,7 @@
         </div>
   
         <div class="nav-links" id="nav-links">
-          <a href="#">Home</a>
+          <a href="index.html">Home</a>
           <a href="about.html">About</a>
           <a href="services.html">Services</a>
           <a href="contact.html">Contact</a>
