--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Fox-In-The-Code</title>
-
+  <link rel="icon" href="images/favicon.png" type="image/x-icon" />
   <!-- ===============================
     FONTIT JA TYYLITIEDOSTOT
   ==================================== -->
